# latchkey

./: .gitignore  .index  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  eslint.config.js  offload.toml  package-lock.json  package.json  pr63-asks-summary.md  pr63-decision-keep-old-notion-BRIEF.md  pr63-decision-keep-old-notion.md  pr63-hynek-comment.md  pr63-info-string.md  pr63-mcp-tools-live-validation.md  pr63-notion-deprecation.md  pr63-reply-draft.md  pyproject.toml  test-verify-install.md  tsconfig.json
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
demo/: open-code-demo-aws-s3.cast  open-code-demo-slack-linear.cast  pi-agent-demo-aws-s3.cast
dev/: record_login.py  test_recordings.py
docs/: development.md  extensions.md
integrations/: SKILL.md
integrations/llm-latchkey/: README.md  llm_latchkey.py  publish.sh  pyproject.toml
latchkey/: api_credential_store.py  api_credentials.py  browser_state.py  cli.py  credential_store.py  credentials.py  curl.py  login_flow.py  playwright_utils.py  registry.py  service.py
plans/: llm-based-evaluation.md
port/: README.md  package-lock.json
scripts/: __init__.py  buildBinaries.sh  codegen.ts  cryptFile.ts  devInspectPage.ts  encryptFile.ts  generateVersion.js  latchkey  offload-tests.sh  recordBrowserSession.ts  record_browser_session.py  record_login.py  releaseBinaries.sh  test_botfather.py  test_telegram_session.py  watch.js
spike/: .gitignore  doordash-cookie-debug.ts  doordash-debug-harness.ts
src/: apiCredentialStore.ts  apiCredentials.ts  apiCredentialsSerialization.ts  apiCredentialsUtils.ts  atomicWrite.ts  browserConfig.ts  browserState.ts  cli.ts  cliCommands.ts  codegen.ts  config.ts  configDataStore.ts  curl.ts  curlInjection.ts  cycleTlsTransport.ts  cycletls.d.ts  dailyCounting.ts  encryptedStorage.ts  encryption.ts  errorMessages.ts  gateway.ts  gatewayClient.ts  index.ts  keychain.ts  latchkeyEndpoint.ts  latestVersionCheck.ts  mathEval.ts  migrations.ts  oauthUtils.ts  permissions.ts  playwright-core.d.ts  playwrightDownload.ts  playwrightLoader.ts  playwrightUtils.ts  registeredService.ts  registeredServiceStore.ts  registry.ts  serviceRegistry.ts  (+4 more)
(+203 files in other folders)
