[project]
name = "latchkey"
version = "0.1.0"
description = "A command-line tool that injects credentials to curl requests to known public APIs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "playwright>=1.49.1",
    "typer>=0.9",
]

[dependency-groups]
dev = [
    "pyright>=1.1",
    "pytest>=8.0",
    "ruff>=0.14",
]

[project.scripts]
latchkey = "latchkey.cli:entry_point"

[tool.ruff]
line-length = 119

[tool.ruff.format]
docstring-code-line-length = 119
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
force-single-line = true
case-sensitive = true
order-by-type = false
known-first-party = [
    "latchkey",
]

[tool.pyright]
include = ["latchkey"]
venvPath = "."
venv = ".venv"
reportMissingImports = "warning"
